# modular_arithmetic

./: CMakeLists.txt  LICENSE.TXT  README.md  build_tests.sh  macros_for_performance.md  msvc_build_tests.bat
example_with_cmake/: CMakeLists.txt  example.cpp  example.sh
images/: readme.txt
modular_arithmetic/: CMakeLists.txt
modular_arithmetic/include/hurchalla/modular_arithmetic/: absolute_value_difference.h  modular_addition.h  modular_multiplication.h  modular_multiplicative_inverse.h  modular_pow.h  modular_subtraction.h
modular_arithmetic/include/hurchalla/modular_arithmetic/detail/: clockwork_programming_by_contract.h  impl_modular_multiplicative_inverse.h  impl_modular_pow.h  ma_numeric_limits.h  optimization_tag_structs.h
modular_arithmetic/include/hurchalla/modular_arithmetic/detail/platform_specific/: compiler_macros.h  impl_absolute_value_difference.h  impl_modular_addition.h  impl_modular_multiplication.h  impl_modular_subtraction.h
modular_arithmetic/include/hurchalla/modular_arithmetic/internal/: impl_modular_multiplicative_inverse.h  impl_modular_pow.h
modular_arithmetic/include/hurchalla/modular_arithmetic/traits/: extensible_make_signed.h  extensible_make_unsigned.h  type_traits.h
modular_arithmetic/include/hurchalla/modular_arithmetic/type_traits/: type_traits.h
modular_arithmetic/platform_dependent/include/hurchalla/modular_arithmetic/internal/: compiler_macros.h  impl_modular_multiplication.h
modular_arithmetic/platform_dependent/src/x86_64_MSVC/: modular_multiply_uint32--x64_microsoft.asm
modular_arithmetic/src/: ma.cpp
modular_arithmetic/src/platform_specific_MSVC_x86_64/: modular_multiply_uint64--x64_microsoft.asm
montgomery_arithmetic/: CMakeLists.txt
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/: MontgomeryForm.h  montgomery_form_aliases.h  optimization_tag_structs.h
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/detail/: BaseMontgomeryValue.h  ImplMontgomeryForm.contents  ImplMontgomeryForm.h  MontgomeryDefault.h  MontgomeryFormExtensions.h  MontgomeryValue.h  MontyCommonBase.h  MontyFullRange.h  MontyFullRangeMasked.h  MontyHalfRange.h  MontyQuarterRange.h  MontySixthRange.h  MontySqrtRange.h  MontyTags.h  MontyWrappedStandardMath.h  README_REDC.md  RedcSmallR.h  impl_montgomery_two_pow.h  inverse_mod_r.h  montgomery_pow.h  monty_common.h  monty_tag_structs.h  negative_inverse_mod_r.h  safely_promote_unsigned.h  sized_uint.h  unsigned_multiply_to_hilo_product.h
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/detail/experimental/: MontyFullRangeMasked.h  MontySqrtRange.h  README.md  README_REDC_supplement.md  montgomery_pow_2kary.h  montgomery_pow_kary.h  montgomery_two_pow_API.h  negative_inverse_mod_R.h  negative_inverse_mod_r.h  perf_winners.txt  test_montgomery_pow_2kary.cpp
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/detail/experimental/montgomery_pow_2kary/: experimental_montgomery_pow_2kary.h  experimental_montgomery_pow_2kary_partial_array_include.h  filter_lines.py  firstline.py  remove_lines.py  testbench_2kary.sh  testbench_all_auto.sh  testbench_montgomery_pow_2kary.cpp
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/detail/experimental/montgomery_two_pow/: bench_reference.sh  example.sh  example_montgomery_two_pow.cpp  experimental_montgomery_two_pow.h  montgomery_two_pow.h  testbench.bat  testbench.sh  testbench_all_auto.sh  testbench_montgomery_two_pow.cpp  testbench_scalar_auto.sh  two_pow_perf_stats_M2.txt
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/detail/experimental/platform_specific/: montadd_sqrt_range.h  montsub_sqrt_range.h
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/detail/platform_specific/: MontHelper.h  README_REDC.md  Redc.h  RedcLargeR.h  halfrange_get_canonical.h  impl_unsigned_multiply_to_hilo_product.h  mont_add_canonical_value.h  mont_subtract_canonical_value.h  montadd_sqrt_range.h  montgomery_pow.h  montgomery_two_pow.h  montmul_full_range.h  montmul_half_range.h  montmul_quarter_range.h  montsub_sqrt_range.h  optimization_tag_structs.h  quarterrange_get_canonical.h  quarterrange_subtract_canonical.h  subtract_returning_difference_or_zero.h  two_times_restricted.h
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/internal/: MontgomeryDefault.h  MontgomeryValue.h  MontyCommonBase.h  MontyFullRange.h  MontyHalfRange.h  MontyQuarterRange.h  MontySqrtRange.h  MontyWrappedStandardMath.h  NonMontyWrapper.h  compiler_macros.h  get_r_mod_n.h  make_safe_unsigned_integer.h  monty_common.h  negative_inverse_mod_r.h  sized_uint.h  unsigned_multiply_to_hilo_product.h
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/low_level_api/: REDC.h  get_R_mod_n.h  get_Rsquared_mod_n.h  inverse_mod_R.h  monty_tag_structs.h  optimization_tag_structs.h  unsigned_multiply_to_hilo_product.h
montgomery_arithmetic/include/hurchalla/montgomery_arithmetic/low_level_api/detail/: impl_inverse_mod_R.h  integer_inverse.odt
montgomery_arithmetic/platform_dependent/include/hurchalla/montgomery_arithmetic/internal/: impl_unsigned_multiply_to_hilo_product.h
test/: CMakeLists.txt  CMakeLists.txt.in  EnableMaxWarnings.cmake  FetchGoogleTest.cmake  test_ma.cpp  test_ma2.cpp
test/modular_arithmetic/: test_absolute_value_difference.cpp  test_modular_addition.cpp  test_modular_addition_with_subtraction.cpp  test_modular_multiplication.cpp  test_modular_multiplicative_inverse.cpp  test_modular_pow.cpp  test_modular_subtraction.cpp
test/montgomery_arithmetic/: NoForceInlineMontgomeryForm.h  test_MontgomeryForm.cpp  test_MontgomeryForm.h  test_MontgomeryFormExtensions.cpp  test_MontgomeryForm_extra.cpp  test_inverse_mod_r.cpp  test_montgomery_pow.cpp  test_montgomery_two_pow.cpp  test_negative_inverse_mod_r.cpp  test_unsigned_multiply_to_hilo_product.cpp
test/montgomery_arithmetic/low_level_api/: test_REDC.cpp  test_REDC.h  test_REDC_inline_asm.cpp  test_get_Rsquared_mod_n.cpp  test_inverse_mod_R.cpp  test_negative_inverse_mod_R.cpp  test_unsigned_multiply_to_hilo_product.cpp
(+702 files in other folders)
